@@ -26,7 +26,7 @@ import fr.cnes.regards.modules.order.exception.CatalogSearchRuntimeException;
 import fr.cnes.regards.modules.order.service.BasketService;
 import fr.cnes.regards.modules.search.client.IComplexSearchClient;
 import fr.cnes.regards.modules.search.domain.plugin.legacy.FacettedPagedModel;
-import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.hateoas.EntityModel;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Component;
@@ -35,7 +35,7 @@ import reactor.core.publisher.Flux;
 import java.util.Collection;
 import java.util.Iterator;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.NoSuchElementException;
 
 /**
  * This class is a helper to query ES in OrderService and OrderProcessingService.
@@ -47,26 +47,40 @@ import java.util.stream.Collectors;
 @Component
 public class BasketSelectionPageSearch {
 
-    public static final int MAX_PAGE_SIZE = 10_000;
+    private final Integer dataObjectsPageSize;
 
-    @Autowired
-    private IComplexSearchClient searchClient;
+    private final IComplexSearchClient searchClient;
+
+    public BasketSelectionPageSearch(@Value("${regards.order.batch.size:10000}") Integer dataObjectsPageSize,
+                                     IComplexSearchClient searchClient) {
+        this.dataObjectsPageSize = dataObjectsPageSize;
+        this.searchClient = searchClient;
+    }
 
     public List<EntityFeature> searchDataObjects(BasketDatasetSelection dsSel, int page) throws CatalogSearchException {
         try {
             ResponseEntity<FacettedPagedModel<EntityModel<EntityFeature>>> pagedResourcesResponseEntity = searchClient.searchDataObjects(
-                BasketService.buildSearchRequest(dsSel, page, MAX_PAGE_SIZE));
+                BasketService.buildSearchRequest(dsSel, page, dataObjectsPageSize));
             // It is mandatory to check NOW, at creation instant of order from basket, if data object files are still downloadable
-            Collection<EntityModel<EntityFeature>> objects = pagedResourcesResponseEntity.getBody().getContent();
-            // If a lot of objects, parallelisation is very useful, if not we don't really care
-            return objects.parallelStream().map(EntityModel::getContent).collect(Collectors.toList());
+            FacettedPagedModel<EntityModel<EntityFeature>> response = pagedResourcesResponseEntity.getBody();
+            if (response != null) {
+                Collection<EntityModel<EntityFeature>> objects = response.getContent();
+                // If a lot of objects, parallelization is very useful, if not we don't really care
+                return objects.parallelStream()
+                              .filter(entity -> entity.getContent() != null)
+                              .map(EntityModel::getContent)
+                              .toList();
+            } else {
+                throw new CatalogSearchException(
+                    "Error trying to search data objects from catalog. Getting null response from catalog service.");
+            }
         } catch (Exception e) {
             throw new CatalogSearchException("Error trying to search data objects from catalog.", e);
         }
     }
 
     public Iterable<List<EntityFeature>> pagedSearchDataObjects(BasketDatasetSelection dsSel) {
-        return () -> new Iterator<List<EntityFeature>>() {
+        return () -> new Iterator<>() {
 
             int page = -1;
 
@@ -80,6 +94,9 @@ public class BasketSelectionPageSearch {
             @Override
             public List<EntityFeature> next() {
                 ++page;
+                if (lastSearchYieldedEmpty) {
+                    throw new NoSuchElementException();
+                }
                 try {
                     List<EntityFeature> entityFeatures = searchDataObjects(dsSel, page);
                     lastSearchYieldedEmpty = entityFeatures.isEmpty();
